comment some css

--- a/MainPage.html
+++ b/MainPage.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/CS%20ChatThai.css">
     <link rel="stylesheet" type="text/css" href="/assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/addLandPage.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/MainLoginPage.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/assets/css/addLandPage.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/assets/css/MainLoginPage.css"> -->
     <link rel="stylesheet" type="text/css" href="/assets/css/MainPage.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/ManagerLoginPage.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/OwnerLoginPage.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/assets/css/ManagerLoginPage.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/assets/css/OwnerLoginPage.css"> -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
@@ -63,7 +64,7 @@
     </div>
     <div id="button-div"><button class="btn btn-primary" id="addLandBtn" type="button">เพิ่มที่ดิน</button></div>
     <div id="map"></div>
-    <!-- <script src="assets/js/jquery.min.js"></script> -->
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/showLandMain.js"></script>
     <script
