--- a/OwnerLoginPage.html
+++ b/OwnerLoginPage.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="assets/css/CS%20ChatThai.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/addLandPage.css">
-    <link rel="stylesheet" href="assets/css/MainLoginPage.css">
-    <link rel="stylesheet" href="assets/css/MainPage.css">
-    <link rel="stylesheet" href="assets/css/ManagerLoginPage.css">
+    <!-- <link rel="stylesheet" href="assets/css/addLandPage.css"> -->
+    <!-- <link rel="stylesheet" href="assets/css/MainLoginPage.css"> -->
+    <!-- <link rel="stylesheet" href="assets/css/MainPage.css"> -->
+    <!-- <link rel="stylesheet" href="assets/css/ManagerLoginPage.css"> -->
     <link rel="stylesheet" href="assets/css/OwnerLoginPage.css">
 </head>
 
