--- a/register.html
+++ b/register.html
@@ -161,7 +161,7 @@
               <!-- /.col -->
             </div>
           </form>
-          <a href="login.html" class="text-center">ฉันเป็นสมาชิกอยู่แล้ว</a>
+          <a href="#" onclick="window.history.back()" class="text-center">ฉันเป็นสมาชิกอยู่แล้ว</a>
         </div>
         <!-- regis form -->
         <div id="regis-success" style="display:none">
