--- a/activities.html
+++ b/activities.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link rel="stylesheet" href="build/css/allelements.css">
   <link rel="stylesheet" href="build/css/activitiesStyle.css">
 </head>
 
@@ -23,6 +24,7 @@
   <div class="wrapper">
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
+      <!--  -->
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
@@ -31,7 +33,8 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <button id="bt-progress-nav" class="btn bg-olive">เพิ่มกิจกรรม</button>
+          <button id="bt-progress-nav" class="btn bg-olive" data-toggle="modal"
+            data-target="#modal-add-activity" onclick="getLandName()">เพิ่มกิจกรรม</button>
         </li>
       </ul>
     </nav>
@@ -40,21 +43,27 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-light-primary elevation-4">
       <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <img src="build/img/icon.png" alt="Proplante logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-bold">PROPLANTE</span>
+      <a id="sidebar-brand-logo" href="index.html" class="brand-link">
+        <table>
+          <tr>
+            <td>
+              <img src="build/img/icon.png" width="50px;" />
+            </td>
+            <td id="band-name">
+              &nbsp;&nbsp;PROPLANTE
+            </td>
+          </tr>
+        </table>
       </a>
-
       <!-- Sidebar -->
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <!-- <div class="image">
-          <i ></i>
-        </div> -->
+            <i ></i>
+          </div> -->
           <div class="info">
-            <a href="#" class="d-block">ยินดีต้อนรับ !</a>
+            <p id="nav-user-name" href="#" class="d-block">ยินดีต้อนรับ </p>
           </div>
         </div>
 
@@ -62,7 +71,7 @@
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
+                 with font-awesome or any other icon font library -->
             <li class="nav-item">
               <a href="index.html" class="nav-link">
                 <i class="fas fa-map-marked-alt"></i>
@@ -111,9 +120,13 @@
                 </p>
               </a>
             </li>
-            <li class="nav-item " id="nav-signout">
-              <a href="#" class="nav-link text-danger">
-                <i class="fas fa-sign-out-alt"></i>
+          </ul>
+        </nav>
+        <nav class="mt-2" style="position: absolute; bottom:2%">
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            <li class="nav-item " id="nav-signout" onclick="signOut()">
+              <a href="#logout" class="nav-link text-danger" id="nav-signout">
+                <i class="fas fa-sign-out-alt" id="nav-signout"></i>
                 <p>
                   &nbsp;&nbsp; ออกจากระบบ
                 </p>
@@ -126,11 +139,10 @@
         <!-- /.sidebar-menu -->
       </div>
       <!-- /.sidebar -->
-
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="min-height: 700px;">
       <!-- Content Header (Page header) -->
       <section class="content-header">
         <div class="container-fluid">
@@ -147,7 +159,8 @@
                 <h4 class="text-success">กิจกรรมทั้งหมด</h4>
               </td>
               <td class="tr-bt-add-ac">
-                <button id="bt-progress-container" class="btn bg-olive">เพิ่มกิจกรรม</button>
+                <button id="bt-progress-container" class="btn bg-olive " onclick="getLandName()" data-toggle="modal"
+                  data-target="#modal-add-activity">เพิ่มกิจกรรม</button>
               </td>
             </tr>
           </table>
@@ -182,8 +195,6 @@
 
           </div>
           <div id="activities-show" class="timeline">
-       
-
           </div>
           <!-- /.row -->
         </div><!-- /.container-fluid -->
@@ -191,9 +202,6 @@
       <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-
-
-
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
       <!-- Control sidebar content goes here -->
@@ -201,7 +209,33 @@
     <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
+  <!-- MODAL -->
+  <div class="modal fade" id="modal-add-activity" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h4 class="modal-title">ที่ดิน</h4>
+          <div class="dropdown" id="dropdown-main">
+            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+              id="land-name-filter" type="button">
+              ที่ดิน
+            </button>
+            <div class="dropdown-menu" role="menu" id="land-dropdown">
+              <a class="dropdown-item" role="presentation" href="#"
+                onclick="setFilterValueOnclick('ที่ดิน','all')">ทั้งหมด</a>
+             </div>
+          </div>
+          <center>
+            <button id="emer-ac-btn" type="button" class="btn bg-olive">&nbsp;เริ่มบันทึก&nbsp;</button>
+          </center>
+        </div>
 
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- MODAL -->
   <!-- jQuery -->
   <script src="../plugins/jquery/jquery.min.js"></script>
   <!-- Bootstrap -->
@@ -214,7 +248,13 @@
   <script src="../dist/js/demo.js"></script>
   <!-- Page specific script -->
 
+  <!-- firebase -->
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+  <!-- firebase -->
   <script src="build/js/connectServer.js"></script>
+  <script src="build/js/activityBar.js"></script>
   <script src="build/js/activitiesFunc.js"></script>
 
 
