--- a/addland.html
+++ b/addland.html
@@ -33,6 +33,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="build/css/allelements.css">
   <link rel="stylesheet" href="build/css/addLandPage.css">
+  <link rel="stylesheet" href="build/css/loader-1.css">
 
 
 </head>
@@ -42,44 +43,57 @@
 
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
+      <form action="" id="search-location-form" class="search-form js-inline ml-3" style="width:50%;">
+        <div class="input-group input-group-sm" style="width:100%">
+          <input id="map_search" autocomplete="off" class="form-control form-control-navbar" type="search"
+            placeholder="ค้นหาสถานที่" aria-label="Search" style="margin-top:0px; font-size: 1.4rem;">
+          <div class="input-group-append" style="background-color: #F2F4F6;">
+            <button id="mapSearchBt" class="btn btn-navbar" type="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </div>
+      </form>
       <!-- Left navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item" id="hamburger">
-          <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-        </li>
+      <!-- <ul class="navbar-nav">
+
+
         <li class="nav-item" id="searchOnMap">
           ค้นหาบนแผนที่
         </li>
 
         <li class="nav-item" id="seachInput">
           <div class="input-group mb-3">
-        <input class="form-control" type="search" placeholder="สถานที่ใกล้เคียงหรือชื่อสถานที่" aria-label="Search"
-          id="map_search">
-        <div class="input-group-append">
-          <button class="btn btn-navbar" type="submit" id="mapSearchBt">
-            <i class="fas fa-search"></i> &nbsp; &nbsp; ค้นหา
-          </button>
-        </div>
-      </div>
+            <input class="form-control" type="search" placeholder="สถานที่ใกล้เคียงหรือชื่อสถานที่" aria-label="Search"
+              id="map_search">
+            <div class="input-group-append">
+              <button class="btn btn-navbar" type="submit" id="mapSearchBt">
+                <i class="fas fa-search"></i> &nbsp; &nbsp; ค้นหา
+              </button>
+            </div>
+          </div>
         </li>
 
-      </ul>
-
-
-      
+      </ul> -->
 
     </nav>
     <!-- /.navbar -->
 
     <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-light-primary elevation-4">
+    <aside id="side-bar-addland" class="main-sidebar sidebar-light-primary elevation-4">
       <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <img src="build/img/icon.png" alt="Proplante logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-bold">PROPLANTE</span>
+      <a id="sidebar-brand-logo" href="index.html" class="brand-link">
+        <table>
+          <tr>
+            <td>
+              <img src="build/img/icon.png" width="50px;" />
+            </td>
+            <td id="band-name">
+              &nbsp;&nbsp;PROPLANTE
+            </td>
+          </tr>
+        </table>
       </a>
-
       <!-- Sidebar -->
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
@@ -98,14 +112,14 @@
                  with font-awesome or any other icon font library -->
 
             <div class="input-group mb-3">
-              <li class="nav-item"> <input type="text" class="form-control" placeholder="ชื่อที่ดิน"
+              <li class="nav-item"> <input type="text" autocomplete="off" class="form-control" placeholder="ชื่อที่ดิน"
                   id="landName-input">
                 <div class="input-group-append">
 
                 </div>
               </li>
-              <li class="nav-item"><input type="text" class="form-control" placeholder="ขนาดที่ดิน (ตารางเมตร)"
-                  id="landArea-input">
+              <li class="nav-item"><input type="text" autocomplete="off" class="form-control"
+                  placeholder="ขนาดที่ดิน (ตารางเมตร)" id="landArea-input">
                 <div class="input-group-append">
 
                 </div>
@@ -120,56 +134,83 @@
         </nav>
 
         <hr>
+        <div id="latlngResult"></div>
+        <div id="calculated-point"></div>
       </div>
+    </aside>
 
-
-      <div id="latlngResult"></div>
-
-
-      <div id="calculated-point"></div>
-
-      <!-- /.sidebar-menu -->
-
-  <!-- /.sidebar -->
-
-
-
-  </aside>
-
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <div id="map"></div>
-    <div id="button-div">
-      <button class="btn btn-primary" id="cancelBtn" type="button">
-        &nbsp; ยกเลิก &nbsp;
-      </button>
-      <button class="btn btn-primary" id="saveBtn" type="button">
-        &nbsp; บันทึก &nbsp;
-      </button>
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+      <div id="map"></div>
+      <div id="button-div">
+        <button class="btn btn-primary" id="cancelBtn" type="button">
+          &nbsp; ยกเลิก &nbsp;
+        </button>
+        <button id="modalSaveBtn" type="button" class="btn btn-primary" data-toggle="modal"
+          data-target="#modal-default">
+          &nbsp;บันทึก&nbsp;
+        </button>
+      </div>
     </div>
+    <!-- /.content-wrapper -->
 
 
-  </div>
-  <!-- /.content-wrapper -->
-
-
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
+    <!-- Control Sidebar -->
+    <aside class="control-sidebar control-sidebar-dark">
+      <!-- Control sidebar content goes here -->
+    </aside>
+    <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
-
+  <!-- MODAL -->
+  <div class="modal fade" id="modal-default" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">คุณต้องการบันทึกพื้นที่นี้ใช่หรือไม่?</h4>
+        </div>
+        <div class="modal-footer justify-content-between">
+          <button id="cancelBtn" type="button" class="btn btn-default" data-dismiss="modal">&nbsp;ยกเลิก&nbsp;</button>
+          <button id="saveBtn" type="button" class="btn btn-primary">&nbsp;บันทึก&nbsp;</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <div class="modal fade" id="modal-success" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">บันทึกเรียบร้อยแล้ว</h4>
+        </div>
+        <div class="modal-footer justify-content-between">
+          <button id="toIndexBtn" type="button" class="btn btn-primary">&nbsp;กลับหน้าหลัก&nbsp;</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- MODAL -->
+  <div id="bg-loading">
+    <div class="loader-wrapper" id="loader-1">
+      <div id="loader"></div>
+    </div>
+  </div>
   <!-- PROPLANTE -->
   <script src="build/js/addLandMap.js"></script>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
     async defer></script>
+
+  <!-- firebase -->
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+  <!-- firebase -->
   <script src="../build/js/connectServer.js"></script>
   <script src="build/js/CalculatedMapArea.js"></script>
-
-
 
   <!-- jQuery -->
   <script src="plugins/jquery/jquery.min.js"></script>
@@ -178,6 +219,7 @@
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
   <script>
     $.widget.bridge('uibutton', $.ui.button)
+
   </script>
   <!-- Bootstrap 4 -->
   <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
