--- a/calendar.html
+++ b/calendar.html
@@ -8,6 +8,8 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
+  <link rel="stylesheet" href="build/css/allelements.css">
+  <link rel="stylesheet" href="build/css/calendarStyle.css">
   <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -21,7 +23,7 @@
   <link rel="stylesheet" href="../dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" href="build/css/calendarStyle.css">
+
 </head>
 
 <body class="hold-transition sidebar-mini ">
@@ -40,21 +42,27 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-light-primary elevation-4">
       <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <img src="build/img/icon.png" alt="Proplante logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-bold">PROPLANTE</span>
+      <a id="sidebar-brand-logo" href="index.html" class="brand-link">
+        <table>
+          <tr>
+            <td>
+              <img src="build/img/icon.png" width="50px;" />
+            </td>
+            <td id="band-name">
+              &nbsp;&nbsp;PROPLANTE
+            </td>
+          </tr>
+        </table>
       </a>
-
       <!-- Sidebar -->
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <!-- <div class="image">
-          <i ></i>
-        </div> -->
+            <i ></i>
+          </div> -->
           <div class="info">
-            <a href="#" class="d-block">ยินดีต้อนรับ !</a>
+            <p id="nav-user-name" href="#" class="d-block">ยินดีต้อนรับ </p>
           </div>
         </div>
 
@@ -62,7 +70,7 @@
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
+                 with font-awesome or any other icon font library -->
             <li class="nav-item">
               <a href="index.html" class="nav-link">
                 <i class="fas fa-map-marked-alt"></i>
@@ -72,7 +80,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link active">
+              <a href="#" class="nav-link">
                 <i class="fas fa-calendar-alt"></i>
                 <p>
                   &nbsp;&nbsp; ตารางงาน
@@ -80,7 +88,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="activities.html" class="nav-link">
+              <a href="activities.html" class="nav-link active">
                 <i class="fas fa-list-alt"></i>
                 <p>
                   &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -111,9 +119,13 @@
                 </p>
               </a>
             </li>
-            <li class="nav-item " id="nav-signout">
-              <a href="#" class="nav-link text-danger">
-                <i class="fas fa-sign-out-alt"></i>
+          </ul>
+        </nav>
+        <nav class="mt-2" style="position: absolute; bottom:2%">
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            <li class="nav-item " id="nav-signout" onclick="signOut()">
+              <a href="#logout" class="nav-link text-danger" id="nav-signout">
+                <i class="fas fa-sign-out-alt" id="nav-signout"></i>
                 <p>
                   &nbsp;&nbsp; ออกจากระบบ
                 </p>
@@ -126,7 +138,6 @@
         <!-- /.sidebar-menu -->
       </div>
       <!-- /.sidebar -->
-
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
@@ -135,8 +146,8 @@
       <section class="content-header">
         <div class="container-fluid">
           <div class="row mb-2">
-            <div class="col-sm-6">
-              <h1>ตารางงาน</h1>
+            <div class="col-sm-6" style="margin-left: 3vw; font-size:1.8rem">
+              <h4>ตารางงาน</h4>
             </div>
 
           </div>
@@ -147,9 +158,9 @@
       <section class="content">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-11" style="margin:auto">
               <div class="card card-primary">
-                <div class="card-body p-0">
+                <div class="card-body p-50">
                   <!-- THE CALENDAR -->
                   <div id="calendar"></div>
                 </div>
@@ -157,27 +168,17 @@
               </div>
               <!-- /.card -->
             </div>
-            <div class="col-md-12">
-              <div class="card">
+            <div class="col-md-11" style="margin:auto">
+              <div class="card" id="activities-browser">
                 <div class="card-header">
                   <h4 class="card-title">รายละเอียด</h4>
                 </div>
                 <div class="card-body">
-                  <div id="activities-table" class="card-body table-responsive p-0">
-                    <table class="table table-striped table-valign-middle">
-                        <thead>
-                          <tr>
-                            <th>ที่ดิน</th>
-                            <th>วันที่</th>
-                            <th>กิจกรรม</th>
-                            <th>สถานะ</th>
-                          </tr>
-                        </thead>
-                      <tbody id="activities-calendar">
-                      </tbody>
-                    </table>
-                  </div>
+                  <div id="activities-table" class="card-body table-responsive p-0"></div>
                 </div>
+              </div>
+              <div id="activities-mobile">
+                <p style="margin-bottom:10px">รายละเอียด</p>
               </div>
 
               <div class="col-md-3" style="display: none">
@@ -245,7 +246,13 @@
   <script src="../plugins/fullcalendar-bootstrap/main.min.js"></script>
   <!-- Page specific script -->
 
+  <!-- firebase -->
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+  <!-- firebase -->
   <script src="build/js/connectServer.js"></script>
+  <script src="build/js/activityBar.js"></script>
   <script src="build/js/calendarFunc.js"></script>
 
 
