--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
 
 
   <!-- PROPLANTE -->
@@ -60,9 +61,8 @@
               จังหวัด
             </button>
             <div class="dropdown-menu" role="menu" id="provice-dropdown">
-              <a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item"
-                role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third
-                Item</a>
+              <a class="dropdown-item" role="presentation" href="#"
+              onClick="setFilterValueOnclick('all')">ทั้งหมด</a>
             </div>
           </div>
           <div class="dropdown" id="dropdown-main">
@@ -71,9 +71,8 @@
               อำเภอ
             </button>
             <div class="dropdown-menu" role="menu" id="district-dropdown">
-              <a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item"
-                role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third
-                Item</a>
+              <a class="dropdown-item" role="presentation" href="#"
+                onClick="setFilterValueOnclick('all')">ทั้งหมด</a>
             </div>
           </div>
           <div class="dropdown" id="dropdown-main">
@@ -83,21 +82,19 @@
             </button>
             <div class="dropdown-menu" role="menu" id="land-dropdown">
               <a class="dropdown-item" role="presentation" href="#"
-                onClick="setFilterValueOnclick('ทั้งหมด')">ทั้งหมด</a>
+                onClick="setFilterValueOnclick('ที่ดิน','all')">ทั้งหมด</a>
             </div>
           </div>
           <div class="dropdown" id="dropdown-main">
-            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="dd-button"
-              type="button">
+            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+              id="plant-filter" type="button">
               พืช
             </button>
             <div class="dropdown-menu" role="menu" id="plant-dropdown">
-              <a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item"
-                role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third
-                Item</a>
+              <a class="dropdown-item" role="presentation" href="#"
+                onClick="setFilterValueOnclick('พืช','all')">ทั้งหมด</a>
             </div>
           </div>
-
           <div id="filterContainerDiv" class="row">
 
             <div class="dropdown" id="dropdown-main">
@@ -106,9 +103,8 @@
                 จังหวัด
               </button>
               <div class="dropdown-menu" role="menu" id="provice-dropdown">
-                <a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item"
-                  role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation"
-                  href="#">Third Item</a>
+                <a class="dropdown-item" role="presentation" href="#"
+                onClick="setFilterValueOnclick('จังหวัด','all')">ทั้งหมด</a>
               </div>
             </div>
             <div class="dropdown" id="dropdown-main">
@@ -117,9 +113,8 @@
                 อำเภอ
               </button>
               <div class="dropdown-menu" role="menu" id="district-dropdown">
-                <a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item"
-                  role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation"
-                  href="#">Third Item</a>
+                <a class="dropdown-item" role="presentation" href="#"
+                onClick="setFilterValueOnclick('อำเภอ','all')">ทั้งหมด</a>
               </div>
             </div>
             <div class="dropdown" id="dropdown-main">
@@ -129,7 +124,7 @@
               </button>
               <div class="dropdown-menu" role="menu" id="land-dropdown">
                 <a class="dropdown-item" role="presentation" href="#"
-                  onClick="setFilterValueOnclick('ทั้งหมด')">ทั้งหมด</a>
+                  onClick="setFilterValueOnclick('ที่ดิน','all')">ทั้งหมด</a>
               </div>
             </div>
             <div class="dropdown" id="dropdown-main">
@@ -138,12 +133,10 @@
                 พืช
               </button>
               <div class="dropdown-menu" role="menu" id="plant-dropdown">
-                <a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item"
-                  role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation"
-                  href="#">Third Item</a>
+                <a class="dropdown-item" role="presentation" href="#"
+                onClick="setFilterValueOnclick('พืช','all')">ทั้งหมด</a>
               </div>
             </div>
-
           </div>
       </ul>
     </nav>
@@ -152,12 +145,18 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-light-primary elevation-4">
       <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <img src="build/img/icon.png" alt="Proplante logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-bold">PROPLANTE</span>
+      <a id="sidebar-brand-logo" href="index.html" class="brand-link">
+        <table>
+          <tr>
+            <td>
+              <img src="build/img/icon.png" width="50px;" />
+            </td>
+            <td id="band-name">
+              &nbsp;&nbsp;PROPLANTE
+            </td>
+          </tr>
+        </table>
       </a>
-
       <!-- Sidebar -->
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
@@ -166,7 +165,7 @@
           <i ></i>
         </div> -->
           <div class="info">
-            <a href="#" class="d-block">ยินดีต้อนรับ !</a>
+            <p id="nav-user-name" href="#" class="d-block">ยินดีต้อนรับ </p>
           </div>
         </div>
 
@@ -223,7 +222,12 @@
                 </p>
               </a>
             </li>
-            <li class="nav-item " id="nav-signout">
+          </ul>
+        </nav>
+        <nav class="mt-2"  style="position: absolute; bottom:2%">
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview"
+            role="menu" data-accordion="false">
+            <li class="nav-item " id="nav-signout" onclick="signOut()">
               <a href="#logout" class="nav-link text-danger" id="nav-signout">
                 <i class="fas fa-sign-out-alt" id="nav-signout"></i>
                 <p>
@@ -238,85 +242,86 @@
         <!-- /.sidebar-menu -->
       </div>
       <!-- /.sidebar -->
-
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-      <div id="map">
-
-      </div>
+      <div id="map"></div>
       <div id="button-div">
         <button class="btn btn-primary" id="addLandBtn" type="button" onclick="window.location.href = 'addland.html';">
           เพิ่มที่ดิน
         </button>
       </div>
+      <div id="img-out"></div>
 
+      <div id="widget" style="width: 90px;">
+
+      </div>
+      <!-- /.content-wrapper -->
+
+
+      <!-- Control Sidebar -->
+      <aside class="control-sidebar control-sidebar-light">
+        <!-- Control sidebar content goes here -->
+      </aside>
+      <!-- /.control-sidebar -->
     </div>
-    <!-- /.content-wrapper -->
+    <!-- ./wrapper -->
+    <script src="plugins/jquery/jquery.min.js"></script>
+
+    <!-- jQuery -->
+
+    <!-- jQuery UI 1.11.4 -->
+    <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <script>
+      $.widget.bridge('uibutton', $.ui.button)
+
+    </script>
+    <!-- Bootstrap 4 -->
+    <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- ChartJS -->
+    <script src="plugins/chart.js/Chart.min.js"></script>
+    <!-- Sparkline -->
+    <script src="plugins/sparklines/sparkline.js"></script>
+    <!-- JQVMap -->
+    <script src="plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <!-- jQuery Knob Chart -->
+    <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
+    <!-- daterangepicker -->
+    <script src="plugins/moment/moment.min.js"></script>
+    <script src="plugins/daterangepicker/daterangepicker.js"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <!-- Summernote -->
+    <script src="plugins/summernote/summernote-bs4.min.js"></script>
+    <!-- overlayScrollbars -->
+    <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="dist/js/adminlte.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <script src="dist/js/pages/dashboard.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="dist/js/demo.js"></script>
 
 
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-light">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
-  </div>
-  <!-- ./wrapper -->
-  <script src="plugins/jquery/jquery.min.js"></script>
+    <!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+    <!-- firebase -->
+    <!-- <script src="build/js/firebaseAuthen.js"></script> -->
+    <!-- PROPLANTE -->
+    <script src="build/js/connectServer.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
+      async defer></script>
+    <script src="build/js/showLandMain.js"></script>
+    <script src="build/js/mainPageFunc.js"></script>
+    <script src="build/js/CalculatedMapArea.js"></script>
 
-  <!-- jQuery -->
-
-  <!-- jQuery UI 1.11.4 -->
-  <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
-
-  </script>
-  <!-- Bootstrap 4 -->
-  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- ChartJS -->
-  <script src="plugins/chart.js/Chart.min.js"></script>
-  <!-- Sparkline -->
-  <script src="plugins/sparklines/sparkline.js"></script>
-  <!-- JQVMap -->
-  <script src="plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="plugins/moment/moment.min.js"></script>
-  <script src="plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Summernote -->
-  <script src="plugins/summernote/summernote-bs4.min.js"></script>
-  <!-- overlayScrollbars -->
-  <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="dist/js/adminlte.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="dist/js/pages/dashboard.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="dist/js/demo.js"></script>
-
-  <!-- PROPLANTE -->
-  <script src="build/js/connectServer.js"></script>
-  <!-- firebase -->
-  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
-  <script src="build/js/firebaseAuthen.js"></script>
-
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
-    async defer></script>
-  <script src="build/js/showLandMain.js"></script>
-  <script src="build/js/mainPageFunc.js"></script>
-  <script src="build/js/CalculatedMapArea.js"></script>
-
-  <!-- PROPLANTE -->
+    <!-- PROPLANTE -->
 
 </body>
 
